# HPC-MLP-Engine

./: .gitignore  CMakeLists.txt  DIAGRAMAS.md  METODOLOGIA_PRUEBAS.md  speedup_multiprocessing.csv
Documentation/: .~lock.Proyecto_Concurrente.pdf#
LoadDataset/: data_loader.py  test_load.py
Paralelo/Multiprocessing/: Main.py
Paralelo/Multiprocessing/src/: Activations.py  DataLoader.py  DenseLayer.py  MLP.py  __init__.py
Paralelo/OpenMP/: OPTIMIZACION_OPENMP.md  build_run.sh  main.c  main.h  mlp_openmp  openmp_speedup.csv  run_speedup.sh
Paralelo/OpenMP/common/: mnist.c
Paralelo/OpenMP/linalg/: linalg.c  linalg.h
Paralelo/OpenMP/network/: network.c
Paralelo/PyCuda/: train_pycuda.py
Secuencial/C/: DOCUMENTACION_MLP_SECUENCIAL.md  build_run.sh  main.c  mlp_secuencial
Secuencial/C/common/: mnist.h
Secuencial/C/linalg/: linalg.c
Secuencial/C/network/: network.h
Secuencial/Python/: Main.py
Secuencial/Python/src/: DenseLayer.py  MLP.py
